# claim_process

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_main.http
migrations/: env.py
migrations/versions/: 5fa60d0ab469_init.py  6fd5179f2d86_change_int_2_str_fields.py  b85542055214_rename_submitted_proc.py
server/: db.py  main.py  models.py  utils.py
server/api/: deps.py  main.py
server/api/routes/: claims.py
server/core/: config.py
