[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'server'
version = '0.1.0'
dependencies = [
    'fastapi',
    'uvicorn',
    'asyncpg',
    'sqlmodel',
    'alembic',
]

[project.optional-dependencies]
dev = [
    'cogapp',
    'pip-tools',
    'ruff',
    'ipython',
]

[tool.setuptools]
package-dir = { '' = './' }
include-package-data = true

[tool.ruff]
target-version = 'py311'
line-length = 120
exclude = ['migrations', '.venv']

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'ANN101', # Missing Type Annotation for 'self'
    'ANN401', # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`'
    'ARG001', # Unused function argument (request, ...)
    'ARG002', # Unused method argument (*args, **kwargs)
    'D', # Missing or badly formatted docstrings
    'E501', # Let the formatter handle long lines
    'FBT', # Flake Boolean Trap (don't use arg=True in functions)
    'RUF012', # Mutable class attributes https://github.com/astral-sh/ruff/issues/5243

    'COM812', # (ruff format) Checks for the absence of trailing commas
    'ISC001', # (ruff format) Checks for implicitly concatenated strings on a single line
    'Q000', # (ruff format) Remove bad quotes
    'Q003', # (ruff format) Avoidable escaped quotes
]

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
'test_*.py' = [
    'S101', # S101 Use of `assert` detected
    'PLR2004', # Magic value used in comparison,
]
'personal_site/settings.py' = [
    'F403', # unable to detect undefined names
    'F405', # may be undefined, or defined from star imports
]

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = 'single'
docstring-code-format = true
